--- a/style.css
+++ b/style.css
@@ -11,24 +11,29 @@
   --dl-color-2: #f71e6a;
   --ul-color-1: #ff8000;
   --ul-color-2: #ff0000;
-  --gauge-width: 40em;
-  --gauge-height: 30em;
+  --meter-width: 37.5em;
+  --meter-height: 30em;
+  --meter-padding: 10em;
+  --meter-outer-radius: 20em;
   --ncsu-font: UniversCondensed;
   --ncsu-red: #c00;
   --ncsu-red-dark: rgb(173, 0, 0);
   --border-radius-primary: 0.5em;
-  --mobile-scale: 1.7;
+  --mobile-scale: 1;
 }
 
 html,
 body {
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  height: 100%;
-  width: 100%;
   background: var(--background-color-primary);
+}
+
+.ul-icon {
+  color: var(--ul-color-1);
 }
 
 .ul-icon i {
@@ -39,6 +44,10 @@ body {
 .ul-icon .amount,
 .ul-icon .unit {
   color: white;
+}
+
+.dl-icon {
+  color: var(--dl-color-2);
 }
 
 .dl-icon .amount,
@@ -88,9 +97,9 @@ body {
   display: grid;
   font-family: var(--font-family-primary);
   font-weight: 300;
-      grid-template-areas: "ping ping" "download download" "button button";
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
+      grid-template-areas: "info" "test" "button";
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
   -ms-grid-rows: 1fr 2fr 1fr;
       grid-template-rows: 1fr 2fr 1fr;
   height: 100%;
@@ -101,17 +110,29 @@ body {
   row-gap: 1em;
 }
 
-.footer {
-  bottom: 0;
+.main-content .start-btn-container {
+  width: var(--meter-width);
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  grid-area: button;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-style: italic;
-  font-weight: 100;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 1em;
+}
+
+.main-content .test-container {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: test;
+}
+
+.main-content .test-info-container {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: info;
 }
 
 .start-btn {
@@ -131,8 +152,8 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: auto;
   width: 10em;
+  position: relative;
 }
 
 .start-btn.running {
@@ -141,9 +162,9 @@ body {
 
 .test-info-container {
   border-radius: var(--border-radius-primary);
-  -webkit-box-shadow: 0px 30px 40px rgba(0, 0, 0, 0.5);
-          box-shadow: 0px 30px 40px rgba(0, 0, 0, 0.5);
-  width: var(--gauge-width);
+  -webkit-box-shadow: 0px 30px 40px 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 30px 40px 10px rgba(0, 0, 0, 0.2);
+  width: var(--meter-width);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -182,27 +203,23 @@ body {
 }
 
 .test-container {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-area: download;
-  border: var(--background-color-primary-dark);
+  -webkit-box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 0.2);
   border-radius: var(--border-radius-primary);
-  -webkit-box-shadow: 0px 30px 40px rgba(0, 0, 0, 0.5);
-          box-shadow: 0px 30px 40px rgba(0, 0, 0, 0.5);
   display: -ms-grid;
   display: grid;
   font-weight: normal;
-      grid-template-areas: "kind" "amount" "unit";
+      grid-template-areas: "kind" "info";
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
-  -ms-grid-rows: 5fr 0.5fr 0.5fr;
-      grid-template-rows: 5fr 0.5fr 0.5fr;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+  width: var(--meter-width);
+  height: var(--meter-height);
   position: relative;
-  row-gap: 1em;
+  row-gap: 2em;
   text-transform: uppercase;
-  width: var(--gauge-width);
-  height: var(--gauge-height);
+  overflow: visible;
 }
 
 .test-container .test-kind {
@@ -213,41 +230,59 @@ body {
   z-index: 9;
 }
 
-.test-container .info .amount {
-  font-size: 5em;
+.test-container .info {
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: "a" "u" ".";
+  -ms-grid-rows: 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
   -ms-grid-row: 2;
   -ms-grid-column: 1;
-  grid-area: amount;
+  grid-area: info;
+}
+
+.test-container .info .amount {
+  font-size: 3em;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: a;
   z-index: 9;
 }
 
 .test-container .info .unit {
-  -ms-grid-row: 3;
+  -ms-grid-row: 2;
   -ms-grid-column: 1;
-  grid-area: unit;
+  grid-area: u;
   text-transform: capitalize;
   z-index: 9;
 }
 
 .test-container canvas {
   height: 100%;
-  margin: auto;
-  position: absolute;
   width: 100%;
+  position: absolute;
   z-index: 1;
 }
 
-.amount:empty:before {
-  content: "0";
-}
-
-.gauge-numbers {
+.meter-numbers {
   font-family: var(--font-family-primary);
   font-size: 1em;
-  font-weight: 100;
+  font-weight: bold;
   position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.meter-numbers div {
   -webkit-transition: all cubic-bezier(0.09, 0.91, 0.5, 1.1) 500ms;
   transition: all cubic-bezier(0.09, 0.91, 0.5, 1.1) 500ms;
+  position: absolute;
 }
 
 @media all and (max-width: 768px) and (orientation: portrait) {
@@ -259,30 +294,28 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-        grid-template-areas: "button" "download" "ping";
+        grid-template-areas: "button" "test" "info";
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
     -ms-grid-rows: 1fr 2fr 2fr;
         grid-template-rows: 1fr 2fr 2fr;
-    margin: 0;
-    padding: 0;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .test-container {
-    height: calc(var(--gauge-height) / var(--mobile-scale));
-    width: calc(var(--gauge-width) / var(--mobile-scale));
+    height: calc(var(--meter-height) / var(--mobile-scale));
+    width: calc(var(--meter-width) / var(--mobile-scale));
   }
   .test-container .test-kind {
     font-size: 2em;
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
-    grid-area: kind;
     z-index: 9;
   }
   .test-container .info .amount {
-    font-size: 4em;
+    font-size: 3em;
   }
   .test-info-container {
-    width: calc(var(--gauge-width) / var(--mobile-scale));
+    width: calc(var(--meter-width) / var(--mobile-scale));
   }
   .test-info-container .info {
     margin: 0.5em;
@@ -302,25 +335,42 @@ body {
         -ms-flex-align: center;
             align-items: center;
     justify-items: center;
-        grid-template-areas: "download ping" "download button";
+        grid-template-areas: "test info" "test button";
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
     -ms-grid-rows: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
     -webkit-column-gap: 0em;
             column-gap: 0em;
+    row-gap: 0;
     margin: 0;
+  }
+  .main-content .start-btn-container {
+    width: 100%;
+    height: 100%;
+  }
+  .main-content .test-container {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  .main-content .test-info-container {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    bottom: 0;
   }
 }
 
 @media all and (max-width: 900px) and (orientation: landscape) {
   html,
   body {
-    font-size: 0.9em;
+    font-size: 1em;
   }
   .test-container {
-    height: calc(var(--gauge-height) / var(--mobile-scale));
-    width: calc(var(--gauge-width) / var(--mobile-scale));
+    height: calc(var(--meter-height) / var(--mobile-scale));
+    width: calc(var(--meter-width) / var(--mobile-scale));
     margin: auto;
   }
   .test-container .test-kind {
@@ -335,7 +385,7 @@ body {
   }
   .test-info-container {
     margin: auto;
-    width: calc(var(--gauge-width) / var(--mobile-scale));
+    width: calc(var(--meter-width) / var(--mobile-scale));
   }
   .test-info-container .info {
     margin: 0.5em;
@@ -343,5 +393,253 @@ body {
   .test-info-container .info .test-kind {
     font-size: 1em;
   }
+}
+
+.circle-container {
+  position: relative;
+  height: 120px;
+  width: 120px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #fff;
+  border: 5px solid var(--color-secondary);
+  border-radius: 100px;
+}
+
+.arrow-down {
+  font-size: 4em;
+  color: var(--color-secondary);
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  -webkit-animation: arrow 4s linear infinite 0;
+          animation: arrow 4s linear infinite 0;
+}
+
+.pulse {
+  margin: 0 auto;
+  border-radius: inherit;
+  position: absolute;
+  z-index: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  opacity: 0;
+  height: inherit;
+  width: inherit;
+  border: 5px solid var(--color-secondary);
+  -webkit-animation: pulse 10s linear infinite 0.3s;
+          animation: pulse 10s linear infinite 0.3s;
+}
+
+@-webkit-keyframes arrow {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  5% {
+    -webkit-transform: translateY(50%);
+            transform: translateY(50%);
+  }
+  10% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  10% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  15% {
+    -webkit-transform: translateY(50%);
+            transform: translateY(50%);
+  }
+  20% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  100% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
+
+@keyframes arrow {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  5% {
+    -webkit-transform: translateY(50%);
+            transform: translateY(50%);
+  }
+  10% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  10% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  15% {
+    -webkit-transform: translateY(50%);
+            transform: translateY(50%);
+  }
+  20% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  100% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    opacity: 0;
+  }
+  25% {
+    opacity: 0;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    opacity: 0.5;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    opacity: 0;
+  }
+  25% {
+    opacity: 0;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    opacity: 0.5;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+}
+
+.filter-contrast {
+  -webkit-filter: contrast(5);
+          filter: contrast(5);
+}
+
+.dot-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  margin: auto;
+}
+
+.dot-overtaking {
+  position: relative;
+  width: 12px;
+  height: 12px;
+  border-radius: 6px;
+  color: white;
+  z-index: 10;
+  margin: -1px 0;
+  -webkit-box-shadow: 0 -20px 0 0;
+          box-shadow: 0 -20px 0 0;
+  -webkit-filter: blur(2px);
+          filter: blur(2px);
+  -webkit-animation: dotOvertaking 2s infinite cubic-bezier(0.2, 0.6, 0.8, 0.2);
+          animation: dotOvertaking 2s infinite cubic-bezier(0.2, 0.6, 0.8, 0.2);
+}
+
+.dot-overtaking::before, .dot-overtaking::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 12px;
+  height: 12px;
+  border-radius: 6px;
+  color: white;
+  -webkit-box-shadow: 0 -20px 0 0;
+          box-shadow: 0 -20px 0 0;
+  -webkit-filter: blur(2px);
+          filter: blur(2px);
+}
+
+.dot-overtaking::before {
+  -webkit-animation: dotOvertaking 2s infinite cubic-bezier(0.2, 0.6, 0.8, 0.2);
+          animation: dotOvertaking 2s infinite cubic-bezier(0.2, 0.6, 0.8, 0.2);
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
+}
+
+.dot-overtaking::after {
+  -webkit-animation: dotOvertaking 1.5s infinite cubic-bezier(0.2, 0.6, 0.8, 0.2);
+          animation: dotOvertaking 1.5s infinite cubic-bezier(0.2, 0.6, 0.8, 0.2);
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s;
+}
+
+@-webkit-keyframes dotOvertaking {
+  0% {
+    -webkit-transform: rotateZ(0deg);
+            transform: rotateZ(0deg);
+  }
+  100% {
+    -webkit-transform: rotateZ(360deg);
+            transform: rotateZ(360deg);
+  }
+}
+
+@keyframes dotOvertaking {
+  0% {
+    -webkit-transform: rotateZ(0deg);
+            transform: rotateZ(0deg);
+  }
+  100% {
+    -webkit-transform: rotateZ(360deg);
+            transform: rotateZ(360deg);
+  }
+}
+
+.test-iframe {
+  border: none;
+  display: block;
+  width: 100%;
+  height: 35rem;
+  margin: 0;
+  overflow: hidden;
 }
 /*# sourceMappingURL=style.css.map */
