Just... A lot of changes, OK?

--- a/style.css
+++ b/style.css
@@ -14,12 +14,12 @@
   --meter-width: 37.5em;
   --meter-height: 30em;
   --meter-padding: 10em;
-  --meter-outer-radius: 20em;
+  --meter-outer-radius: 22em;
   --ncsu-font: UniversCondensed;
   --ncsu-red: #c00;
   --ncsu-red-dark: rgb(173, 0, 0);
   --border-radius-primary: 0.5em;
-  --mobile-scale: 1;
+  --mobile-scale: 1.5;
 }
 
 html,
@@ -61,7 +61,7 @@ body {
 }
 
 .tmp .text {
-  font-size: 1.2em;
+  font-size: 1.5em;
   text-transform: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -75,7 +75,7 @@ body {
 }
 
 .tmp i {
-  font-size: 10em;
+  font-size: 15em;
   color: var(--color-secondary);
 }
 
@@ -177,11 +177,11 @@ body {
 }
 
 .test-info-container .info {
-  margin: 2em;
+  margin: 1.2em;
 }
 
 .test-info-container .info .test-kind {
-  font-size: 1.4em;
+  font-size: 1.5em;
   text-align: center;
 }
 
@@ -231,13 +231,12 @@ body {
 }
 
 .test-container .info {
-  display: -ms-grid;
-  display: grid;
-      grid-template-areas: "a" "u" ".";
-  -ms-grid-rows: 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr 1fr;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
+  position: absolute;
+  margin: auto;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 1em;
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: info;
@@ -245,15 +244,11 @@ body {
 
 .test-container .info .amount {
   font-size: 3em;
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
   grid-area: a;
   z-index: 9;
 }
 
 .test-container .info .unit {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
   grid-area: u;
   text-transform: capitalize;
   z-index: 9;
@@ -308,20 +303,29 @@ body {
     width: calc(var(--meter-width) / var(--mobile-scale));
   }
   .test-container .test-kind {
-    font-size: 2em;
+    font-size: 1.5em;
     z-index: 9;
   }
+  .test-container .info {
+    margin: 0.5em;
+  }
   .test-container .info .amount {
-    font-size: 3em;
+    font-size: 2em;
   }
   .test-info-container {
     width: calc(var(--meter-width) / var(--mobile-scale));
   }
-  .test-info-container .info {
-    margin: 0.5em;
-  }
   .test-info-container .info .test-kind {
     font-size: 1em;
+  }
+  .test-info-container .info .amount {
+    font-size: 3em;
+  }
+  .tmp .text {
+    font-size: 1.5em;
+  }
+  .tmp i {
+    font-size: 12em;
   }
 }
 
