--- a/style.css
+++ b/style.css
@@ -14,12 +14,13 @@
   --meter-width: 37.5em;
   --meter-height: 30em;
   --meter-padding: 10em;
-  --meter-outer-radius: 22em;
+  --meter-outer-radius: 15em;
   --ncsu-font: UniversCondensed;
   --ncsu-red: #c00;
   --ncsu-red-dark: rgb(173, 0, 0);
   --border-radius-primary: 0.5em;
-  --mobile-scale: 1.5;
+  --mobile-scale: 1.2;
+  --tmp-scale: 1.5;
 }
 
 html,
@@ -223,7 +224,7 @@ body {
 }
 
 .test-container .test-kind {
-  font-size: 3em;
+  font-size: 2em;
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: kind;
@@ -280,11 +281,7 @@ body {
   position: absolute;
 }
 
-@media all and (max-width: 768px) and (orientation: portrait) {
-  html,
-  body {
-    font-size: 1em;
-  }
+@media all and (max-width: 700px) {
   .main-content {
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -299,8 +296,8 @@ body {
             justify-content: center;
   }
   .test-container {
-    height: calc(var(--meter-height) / var(--mobile-scale));
-    width: calc(var(--meter-width) / var(--mobile-scale));
+    height: calc(var(--meter-height) / var(--tmp-scale));
+    width: calc(var(--meter-width) / var(--tmp-scale));
   }
   .test-container .test-kind {
     font-size: 1.5em;
@@ -313,7 +310,7 @@ body {
     font-size: 2em;
   }
   .test-info-container {
-    width: calc(var(--meter-width) / var(--mobile-scale));
+    width: calc(var(--meter-width) / var(--tmp-scale));
   }
   .test-info-container .info .test-kind {
     font-size: 1em;
@@ -326,6 +323,32 @@ body {
   }
   .tmp i {
     font-size: 12em;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  :root {
+    --mobile-scale: 2.5;
+    --tmp-scale: 2;
+  }
+  .test-container .info {
+    font-size: 0.8em;
+    margin: 0;
+  }
+  .test-info-container .info {
+    margin: 0.5em;
+  }
+  .test-info-container .info .test-kind {
+    font-size: 0.5em;
+  }
+  .test-info-container .info .amount {
+    font-size: 3em;
+  }
+  .tmp .text {
+    font-size: 1em;
+  }
+  .tmp i {
+    font-size: 8em;
   }
 }
 
@@ -373,8 +396,8 @@ body {
     font-size: 1em;
   }
   .test-container {
-    height: calc(var(--meter-height) / var(--mobile-scale));
-    width: calc(var(--meter-width) / var(--mobile-scale));
+    height: calc(var(--meter-height) / var(--tmp-scale));
+    width: calc(var(--meter-width) / var(--tmp-scale));
     margin: auto;
   }
   .test-container .test-kind {
@@ -389,13 +412,13 @@ body {
   }
   .test-info-container {
     margin: auto;
-    width: calc(var(--meter-width) / var(--mobile-scale));
+    width: calc(var(--meter-width) / var(--tmp-scale));
   }
   .test-info-container .info {
     margin: 0.5em;
   }
   .test-info-container .info .test-kind {
-    font-size: 1em;
+    font-size: 0.8em;
   }
 }
 
