Minor margin change.

--- a/style.scss
+++ b/style.scss
@@ -108,7 +108,7 @@ body {
     padding: 0;
     position: relative;
     text-align: center;
-
+    margin: 1em;
     row-gap: 1em;
 
     .start-btn-container {
