--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   --dl-color-2: #f71e6a;
   --ul-color-1: #ff8000;
   --ul-color-2: #ff0000;
-  --meter-width: 37.5em;
+  --meter-width: 30em;
   --meter-height: 30em;
   --meter-padding: 10em;
   --meter-outer-radius: 15em;
@@ -20,7 +20,6 @@
   --ncsu-red-dark: rgb(173, 0, 0);
   --border-radius-primary: 0.5em;
   --mobile-scale: 1.2;
-  --tmp-scale: 1.5;
 }
 
 html,
@@ -110,6 +109,10 @@ body {
   text-align: center;
   margin: 1em;
   row-gap: 1em;
+  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .main-content .start-btn-container {
@@ -170,38 +173,22 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.test-info-container .info {
-  margin: 1em;
+  padding: 1em;
 }
 
 .test-info-container .info .test-kind {
-  font-size: 1.5em;
+  font-size: 1em;
   text-align: center;
 }
 
 .test-info-container .info .amount {
-  display: inline-block;
-  font-size: 2.5em;
-}
-
-.test-info-container .info .amount #ip {
-  text-align: left;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  width: 100%;
-}
-
-.test-info-container .info .unit {
-  margin: 0;
-  padding: 0;
+  font-size: 3em;
 }
 
 .test-container {
@@ -239,21 +226,18 @@ body {
   left: 0;
   right: 0;
   margin: 1em;
+  z-index: 9;
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: info;
 }
 
 .test-container .info .amount {
-  font-size: 3em;
-  grid-area: a;
-  z-index: 9;
+  font-size: 3.5em;
 }
 
 .test-container .info .unit {
-  grid-area: u;
   text-transform: capitalize;
-  z-index: 9;
 }
 
 .test-container canvas {
@@ -282,42 +266,24 @@ body {
   position: absolute;
 }
 
-@media all and (max-width: 700px) {
+@media all and (max-width: 900px) and (orientation: portrait) {
+  html,
+  body {
+    font-size: 1em;
+  }
   .main-content {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
         grid-template-areas: "button" "test" "info";
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
     -ms-grid-rows: 1fr 2fr 2fr;
         grid-template-rows: 1fr 2fr 2fr;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
   }
   .test-container {
-    height: calc(var(--meter-height) / var(--tmp-scale));
-    width: calc(var(--meter-width) / var(--tmp-scale));
-  }
-  .test-container .test-kind {
-    font-size: 1.5em;
-    z-index: 9;
-  }
-  .test-container .info {
-    margin: 0.5em;
-  }
-  .test-container .info .amount {
-    font-size: 2em;
+    height: calc(var(--meter-height) / var(--mobile-scale));
+    width: calc(var(--meter-width) / var(--mobile-scale));
   }
   .test-info-container {
-    width: calc(var(--meter-width) / var(--tmp-scale));
-  }
-  .test-info-container .info .test-kind {
-    font-size: 1em;
-  }
-  .test-info-container .info .amount {
-    font-size: 3em;
+    width: calc(var(--meter-width) / var(--mobile-scale));
   }
   .tmp .text {
     font-size: 1.5em;
@@ -327,29 +293,17 @@ body {
   }
 }
 
-@media only screen and (max-width: 400px) {
-  :root {
-    --mobile-scale: 2.5;
-    --tmp-scale: 2;
-  }
-  .test-container .info {
+@media all and (max-width: 400px) and (orientation: portrait) {
+  html,
+  body {
     font-size: 0.8em;
-    margin: 0;
   }
-  .test-info-container .info {
-    margin: 0.7em;
-  }
-  .test-info-container .info .test-kind {
-    font-size: 0.5em;
-  }
-  .test-info-container .info .amount {
-    font-size: 3em;
-  }
-  .tmp .text {
-    font-size: 1em;
-  }
-  .tmp i {
-    font-size: 8em;
+}
+
+@media all and (min-width: 1500px) and (orientation: portrait) {
+  html,
+  body {
+    font-size: 1.5em;
   }
 }
 
@@ -373,32 +327,16 @@ body {
     row-gap: 0;
     margin: 0;
   }
-  .main-content .start-btn-container {
-    width: 100%;
-    height: 100%;
-  }
-  .main-content .test-container {
-    -webkit-box-shadow: none;
-            box-shadow: none;
-  }
-  .main-content .test-info-container {
-    -webkit-box-shadow: none;
-            box-shadow: none;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    bottom: 0;
-  }
 }
 
 @media all and (max-width: 900px) and (orientation: landscape) {
   html,
   body {
-    font-size: 1em;
+    font-size: 0.9em;
   }
   .test-container {
-    height: calc(var(--meter-height) / var(--tmp-scale));
-    width: calc(var(--meter-width) / var(--tmp-scale));
+    height: calc(var(--meter-height) / var(--mobile-scale));
+    width: calc(var(--meter-width) / var(--mobile-scale));
     margin: auto;
   }
   .test-container .test-kind {
@@ -413,13 +351,13 @@ body {
   }
   .test-info-container {
     margin: auto;
-    width: calc(var(--meter-width) / var(--tmp-scale));
+    width: calc(var(--meter-width) / var(--mobile-scale));
   }
   .test-info-container .info {
     margin: 0.5em;
   }
   .test-info-container .info .test-kind {
-    font-size: 0.8em;
+    font-size: 1em;
   }
 }
 
