--- a/style.scss
+++ b/style.scss
@@ -15,7 +15,7 @@
     --ul-color-1: #ff8000;
     --ul-color-2: #ff0000;
 
-    --meter-width: 37.5em;
+    --meter-width: 30em;
     --meter-height: 30em;
     --meter-padding: 10em;
     --meter-outer-radius: 15em;
@@ -25,7 +25,6 @@
     --ncsu-red-dark: rgb(173, 0, 0);
     --border-radius-primary: 0.5em;
     --mobile-scale: 1.2;
-    --tmp-scale: 1.5;
 }
 
 html,
@@ -110,6 +109,8 @@ body {
     text-align: center;
     margin: 1em;
     row-gap: 1em;
+    align-items: center;
+    justify-content: center;
 
     .start-btn-container {
         width: var(--meter-width);
@@ -154,32 +155,19 @@ body {
 
     width: var(--meter-width);
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 
-    .info {
-        margin: 1em;
+    padding: 1em;
 
+    .info {
         .test-kind {
-            font-size: 1.5em;
+            font-size: 1em;
             text-align: center;
         }
 
         .amount {
-            display: inline-block;
-            font-size: 2.5em;
-
-            #ip {
-                text-align: left;
-                text-overflow: ellipsis;
-                white-space: nowrap;
-                width: 100%;
-            }
-        }
-
-        .unit {
-            margin: 0;
-            padding: 0;
+            font-size: 3em;
         }
     }
 }
@@ -219,26 +207,15 @@ body {
         left: 0;
         right: 0;
         margin: 1em;
-
-        // display: grid;
-        // grid-template-areas:
-        //     "a"
-        //     "u"
-        //     ".";
-        // grid-template-rows: 1fr 1fr 1fr;
-        // grid-template-columns: 1fr;
+        z-index: 9;
 
         grid-area: info;
         .amount {
-            font-size: 3em;
-            grid-area: a;
-            z-index: 9;
+            font-size: 3.5em;
         }
 
         .unit {
-            grid-area: u;
             text-transform: capitalize;
-            z-index: 9;
         }
     }
 
@@ -269,10 +246,13 @@ body {
     }
 }
 
-@media all and (max-width: 700px) {
-    .main-content {
-        align-items: center;
+@media all and (max-width: 900px) and (orientation: portrait) {
+    html,
+    body {
+        font-size: 1em;
+    }
 
+    .main-content {
         grid-template-areas:
             "button"
             "test"
@@ -280,39 +260,15 @@ body {
 
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 2fr 2fr;
-
-        justify-content: center;
     }
 
     .test-container {
-        height: calc(var(--meter-height) / var(--tmp-scale));
-        width: calc(var(--meter-width) / var(--tmp-scale));
-
-        .test-kind {
-            font-size: 1.5em;
-            z-index: 9;
-        }
-
-        .info {
-            margin: 0.5em;
-            .amount {
-                font-size: 2em;
-            }
-        }
+        height: calc(var(--meter-height) / var(--mobile-scale));
+        width: calc(var(--meter-width) / var(--mobile-scale));
     }
 
     .test-info-container {
-        width: calc(var(--meter-width) / var(--tmp-scale));
-
-        .info {
-           
-            .test-kind {
-                font-size: 1em;
-            }
-            .amount {
-                font-size: 3em;
-            }
-        }
+        width: calc(var(--meter-width) / var(--mobile-scale));
     }
 
     .tmp {
@@ -325,38 +281,17 @@ body {
     }
 }
 
-@media only screen and (max-width: 400px) {
-    :root {
-        --mobile-scale: 2.5;
-        --tmp-scale: 2;
+@media all and (max-width: 400px) and (orientation: portrait) {
+    html,
+    body {
+        font-size: 0.8em;
     }
+}
 
-    .test-container {
-        .info {
-            font-size: 0.8em;
-            margin: 0;
-        }
-    }
-
-    .test-info-container {
-        .info {
-            margin: 0.7em;
-            .test-kind {
-                font-size: 0.5em;
-            }
-            .amount {
-                font-size: 3em;
-            }
-        }
-    }
-
-    .tmp {
-        .text {
-            font-size: 1em;
-        }
-        i {
-            font-size: 8em;
-        }
+@media all and (min-width: 1500px) and (orientation: portrait) {
+    html,
+    body {
+        font-size: 1.5em;
     }
 }
 
@@ -378,35 +313,18 @@ body {
         column-gap: 0em;
         row-gap: 0;
         margin: 0;
-
-        .start-btn-container {
-            width: 100%;
-            height: 100%;
-        }
-
-        .test-container {
-            box-shadow: none;
-        }
-
-        .test-info-container {
-            box-shadow: none;
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            bottom: 0;
-        }
     }
 }
 
 @media all and (max-width: 900px) and (orientation: landscape) {
     html,
     body {
-        font-size: 1em;
+        font-size: 0.9em;
     }
 
     .test-container {
-        height: calc(var(--meter-height) / var(--tmp-scale));
-        width: calc(var(--meter-width) / var(--tmp-scale));
+        height: calc(var(--meter-height) / var(--mobile-scale));
+        width: calc(var(--meter-width) / var(--mobile-scale));
         margin: auto;
 
         .test-kind {
@@ -423,13 +341,13 @@ body {
     }
     .test-info-container {
         margin: auto;
-        width: calc(var(--meter-width) / var(--tmp-scale));
+        width: calc(var(--meter-width) / var(--mobile-scale));
 
         .info {
             margin: 0.5em;
 
             .test-kind {
-                font-size: 0.8em;
+                font-size: 1em;
             }
         }
     }
